add validation to login&register, user edit and add two more product types
